# sequence-labeling-by-nn

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  postager-bilstm.cc  slnn.cpp
src/: CMakeLists.txt  bilstmmodel4ner.hpp  bilstmmodel4tagging.hpp  dict_wrapper.hpp  ner.cc  postagger.cc  stat.hpp  stat4postagger.hpp  utf8processing.hpp
src/modelmodule/: CMakeLists.txt  context.h  context_extractor.h  context_feature.cpp  context_feature.h  context_feature_extractor.h  context_feature_layer.cpp  context_feature_layer.h  context_layer.h  hyper_input_layers.cpp  hyper_input_layers.h  hyper_layers.cpp  hyper_layers.h  hyper_output_layers.cpp  hyper_output_layers.h  layers.cpp  layers.h
src/modelmodule/nn/: nn_common_interface.h  nn_common_interface_dynet_impl.cpp  nn_common_interface_dynet_impl.h
src/ner/: CMakeLists.txt  bilstmmodel4ner.hpp  ner.cc
src/ner/base_model/: input2D_model.cpp  input2D_model.h
src/ner/mlp/: CMakeLists.txt  cl.cpp  structure_param_module4cl.h  token_module.cpp  token_module.h
src/ner/model_handler/: input2D_modelhandler.h
src/ner/module/: model_handler.h  model_utility.cpp  model_utility.h  ner_reader.cpp  ner_reader.h  nn_module.cpp  nn_module.h  structure_param_module.cpp  structure_param_module.h  token_module.cpp  token_module.h
src/ner/ner/: CMakeLists.txt  bilstmmodel4ner.hpp  ner.cpp
src/ner/ner_cl/: CMakeLists.txt  ner_cl.cpp
src/ner/ner_crf/: CMakeLists.txt  ner_crf.cpp  ner_crf_model.cpp  ner_crf_model.h  ner_crf_modelhandler.cpp  ner_crf_modelhandler.h
src/ner/ner_crf_dc/: CMakeLists.txt  ner_crf_dc.cpp  ner_crf_dc_model.cpp  ner_crf_dc_model.h  ner_crf_dc_modelhandler.cpp  ner_crf_dc_modelhandler.h
src/ner/ner_doublechannel/: CMakeLists.txt  ner_dc_model.cpp  ner_dc_model.h  ner_dc_modelhandler.cpp  ner_dc_modelhandler.h  ner_doublechannel.cpp
src/ner/ner_single_classification/: CMakeLists.txt  ner_single_classification.cpp  ner_single_classification_model.cpp  ner_single_classification_model.h
src/postagger/: CMakeLists.txt  bilstmcrf.cpp  bilstmcrf.h  bilstmcrf_dc.cpp  bilstmcrf_dc.h  bilstmcrf_dc_modelhandler.cpp  bilstmcrf_dc_modelhandler.h  bilstmcrf_modelhandler.cpp  bilstmcrf_modelhandler.h  bilstmmodel4tagging.hpp  bilstmmodel4tagging_doublechannel.cpp  bilstmmodel4tagging_doublechannel.h  doublechannel_modelhandler.cpp  doublechannel_modelhandler.h  postagger.cpp  postagger_bilstm_crf.cpp  postagger_doublechannel.cpp
src/postagger/base_model/: bareinput1_f2i_no_merge_model.hpp  bareinput1_f2o_no_merge_model.hpp  bareinput1_f2o_nonlinear_model.hpp  input1_feature2input_layer_model.hpp  input1_feature2output_layer_model.hpp  input1_mlp_model.cpp  input1_mlp_model.h  input1_mlp_model_no_feature.cpp  input1_mlp_model_no_feature.h  input2_feature2input_layer_model.hpp  input2_feature2output_layer_model.hpp  input2_with_feature_model.hpp  single_input_model.cpp  single_input_model.h  single_input_with_feature_model.hpp
src/postagger/model_handler/: input1_mlp_modelhandler.h  input1_mlp_modelhandler_no_feature.h  input2_with_feature_modelhandler.hpp  single_input_modelhandler.h  single_input_with_feature_modelhandler.hpp
src/postagger/pos_bareinput1_classification_with_feature_no_merge/: CMakeLists.txt  pos_bareinput1_classification_f2i_no_merge.cpp  pos_bareinput1_classification_f2i_no_merge_model.h  pos_bareinput1_classification_f2o_no_merge.cpp  pos_bareinput1_classification_f2o_no_merge_model.h  pos_bareinput1_f2o_nonlinear.cpp  pos_bareinput1_f2o_nonlinear_model.h
src/postagger/pos_input1_mlp_with_tag/: CMakeLists.txt  pos_input1_mlp_with_tag.cpp  pos_input1_mlp_with_tag_model.cpp  pos_input1_mlp_with_tag_model.h
src/postagger/pos_input1_mlp_without_tag/: CMakeLists.txt  pos_input1_mlp_without_tag.cpp  pos_input1_mlp_without_tag_model.cpp  pos_input1_mlp_without_tag_model.h
src/postagger/pos_input1_mlp_without_tag_NO_FEATURE/: CMakeLists.txt  pos_input1_mlp_without_tag_no_feature.cpp  pos_input1_mlp_without_tag_no_feature_model.cpp  pos_input1_mlp_without_tag_no_feature_model.h
src/postagger/pos_input2_classification_with_feature/: CMakeLists.txt  pos_input2_classification_feature2input_layer.cpp  pos_input2_classification_feature2input_layer_model.h  pos_input2_classification_feature2output_layer.cpp  pos_input2_classification_feature2output_layer_model.h
src/postagger/pos_input2_crf_with_feature/: CMakeLists.txt  pos_input2_crf_feature2input_layer.cpp  pos_input2_crf_feature2input_layer_model.h  pos_input2_crf_feature2output_layer.cpp  pos_input2_crf_feature2output_layer_model.h
src/postagger/pos_input2_pretag_with_feature/: CMakeLists.txt  pos_input2_pretag_feature2input_layer.cpp  pos_input2_pretag_feature2input_layer_model.h  pos_input2_pretag_feature2output_layer.cpp  pos_input2_pretag_feature2output_layer_model.h
src/postagger/pos_single_classification/: CMakeLists.txt  pos_single_classification.cpp  pos_single_classification_model.cpp  pos_single_classification_model.h
src/postagger/pos_single_classification_with_feature/: CMakeLists.txt  pos_input1_classification_feature2input_layer.cpp  pos_input1_classification_feature2input_layer_model.h  pos_input1_classification_feature2output_layer.cpp  pos_input1_classification_feature2output_layer_model.h  pos_single_classification_with_feature.cpp  pos_single_classification_with_feature_model.cpp  pos_single_classification_with_feature_model.h
src/postagger/pos_single_crf_with_feature/: CMakeLists.txt  pos_input1_crf_feature2input_layer.cpp  pos_input1_crf_feature2input_layer_model.h  pos_input1_crf_feature2output_layer.cpp  pos_input1_crf_feature2output_layer_model.h
src/postagger/postagger_crf/: CMakeLists.txt  bilstmcrf.cpp  (+4 more)
src/segmenter/: CMakeLists.txt
src/segmentor/: CMakeLists.txt
src/trivial/: CMakeLists.txt  lookup_table.cpp  lookup_table.h
src/unittest/: CMakeLists.txt  CMakelists.txt
src/utils/: dict_wrapper.hpp  general.hpp  nn_utility.cpp  nn_utility.h  reader.hpp  stash_model.hpp  stat.hpp  typedeclaration.h  utf8processing.hpp  word2vec_embedding_helper.cpp  word2vec_embedding_helper.h  writer.h
(+351 files in other folders)
